--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1"
   }
 }
